# IDKtools

./: .gitignore  CMakeLists.txt  build.sh  textureconvert
src/BRDF_LUT/: brdf-lut.comp  main.cpp
src/MapIBL/: diffuseIBL.cpp  specularIBL.cpp
src/MapIBL/shaders/: diffuseIBL.fs  specularIBL.fs
src/ModelConvert/: animation.cpp  animation.hpp  loader.hpp  modelconvert.cpp  skeleton.hpp
src/TextureConvert/: textureconvert.cpp
